syntax = "proto3";

package v1.aspbv1;

import "v1/aspb/msg_anime_season.proto";
import "v1/ashpb/anime_title.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/v1/aspb;aspbv1";

message CreateAnimeSeasonTitlesRequest {
  int64                      seasonID     = 1;
  ashpbv1.AnimeTitlesRequest seasonTitles = 2;
}

message CreateAnimeSeasonTitlesResponse {
  ashpbv1.AnimeTitlesResponse seasonTitles = 1;
}